##
## Written by Yinka Asonbare
##
## 5th Feb 2016
#

AC_INIT([GtkTreeView], [0.0.1], [com.ashon-associates.cpp.treeview])
AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
PKG_CHECK_MODULES([MYGTKMM], [gtkmm-3.0 >= 3.8.0])
AC_CONFIG_FILES([
    Makefile
    src/Makefile
])
AC_OUTPUT


echo ""
echo "------------------------------------------------------"
echo "    Finished generating Makefile"
echo ""
echo "0000000000000 ALL IS GOOD 0000000000000000000000000000"

