## Manually written
bin_PROGRAMS=$(top_builddir)/bin/mytreeview

__top_builddir__bin_mytreeview_SOURCES=main.cc MyTreeView.cc

__top_builddir__bin_mytreeview_CPPFLAGS=$(MYGTKMM_CFLAGS)
__top_builddir__bin_mytreeview_LDADD=$(MYGTKMM_LIBS)
__top_builddir__bin_mytreeview_CXXFLAGS= -Wall -Werror -std=c++11 -pedantic -g
